syntax = "proto3";
package products;

option go_package = "github.com/phamhoangnam0890/product-management-service/app/proto/products";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// 商品マスター
service ProductItemsService {

  // 一覧
  rpc ListProductItems (ListProductItemRequest) returns (ListProductItemsResponse) {
  }
  // 詳細
  rpc GetProductItemInfo (GetProductItemInfoRequest) returns (GetProductItemsInfoResponse) {
  }
  // 登録
  rpc CreateProductItems (CreateProductItemRequest) returns (CreateProductItemResponse) {
  }
  // 編集
  rpc UpdateProductItems (UpdateProductItemsRequest) returns (google.protobuf.Empty) {
  }
  // 仕入れ元画像	Temp Upload
  rpc UploadProductItemsImage (UploadProductItemsImageRequest) returns (UploadProductItemsImageResponse) {
  }
  // Get image
  rpc GetProductItemsImage (GetProductItemsImageRequest) returns (GetProductItemsImageResponse) {
  }
}

message ProductItemSortModel {
  int64 type = 1;
  bool asc = 2;
}

message GetProductItemsImageRequest {
  string path = 1;
}

message GetProductItemsImageResponse {
  bytes data = 1;
}

message UploadProductItemsImageRequest {
  int64 product_item_id = 1;
  string image_name = 2;
  string image_data = 3;
  string image_type = 4;
  string image_alt = 5;
}

message UploadProductItemsImageResponse {
  ProductImageInfo image = 1;
}

message ProductImageInfo {
  string picture_id = 1;
  string image_path = 2;
  string image_name = 3;
  string image_alt = 4;
  int64 image_no = 5;
}


// 一覧
message ListProductItemRequest {
  google.protobuf.Int64Value offset = 1;
  google.protobuf.StringValue key_word = 2;
  google.protobuf.Int64Value category = 3;
  google.protobuf.Int64Value status = 4;
  ProductItemSortModel sorting = 5;
}

message ListProductItemsResponse {
  repeated ProductItemsListData data = 1;
  int64 total = 2;
}

message ProductItemsListData {
  int64 product_item_id = 1;
  string product_id = 2;
  string product_name = 3;
  string input_price = 4;
  string price = 5;
  string quantity = 6;
  google.protobuf.Timestamp updated_at = 7;
  string status = 8;
}

// 詳細
message GetProductItemInfoRequest {
  int64 product_item_id = 1;
}

message GetProductItemsInfoResponse {
  string product_id = 1;
  string product_item_name = 2;
  string input_price = 3;
  string url = 4;
  repeated ProductImageInfo images = 5;
  string description = 6;
  string price_tax = 7;
  string quantity = 8;
  google.protobuf.Timestamp input_date = 9;
  string product_status = 10;
  string category_name = 11;
  int64 category_id = 12;
}

// 登録
message CreateProductItemRequest {
  int64 category_id = 1;
  string product_id = 2;
  string product_item_name = 3;
  string input_price = 4;
  string url = 5;
  repeated ProductImageInfo images = 6;
  string description = 7;
  string price_tax = 8;
  string quantity = 9;
  google.protobuf.Timestamp input_date = 10;
}

message CreateProductItemResponse {
  int64 product_item_id = 1;
}

// 編集
message UpdateProductItemsRequest {
  int64 product_item_id = 1;
  int64 category_id = 2;
  string product_id = 3;
  string product_item_name = 4;
  string input_price = 5;
  string url = 6;
  repeated ProductImageInfo images = 7;
  string description = 8;
  string price_tax = 9;
  string quantity = 10;
  google.protobuf.Timestamp input_date = 11;
}